--- a/proyectos.html
+++ b/proyectos.html
@@ -17,7 +17,7 @@
     <header>
       <!-- clase para que el header ocupe toda la pantalla -->
       <div class="row">
-        <div class="col-12 border">
+        <div class="col-12">
           <p>prueba</p>
         </div>
       </div>
@@ -27,49 +27,49 @@
       <!-- clase para la fila con 3 columnas en pantalla grande y una en pantalla chiquita -->
       <div class="row">
         <!-- clase de la columna -->
-        <div class="col-12 col-sm-12 col-md-12 col-lg-4 border">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-4">
           <p>prueba</p>
         </div>
-        <div class="col-12 col-sm-12 col-md-12 col-lg-4 border">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-4">
           <p>prueba</p>
         </div>
-        <div class="col-12 col-sm-12 col-md-12 col-lg-4 border">
-          <p>prueba</p>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-12 col-sm-12 col-md-12 col-lg-4 border">
-          <p>prueba</p>
-        </div>
-        <div class="col-12 col-sm-12 col-md-12 col-lg-4 border">
-          <p>prueba</p>
-        </div>
-        <div class="col-12 col-sm-12 col-md-12 col-lg-4 border">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-4">
           <p>prueba</p>
         </div>
       </div>
 
       <div class="row">
-        <div class="col-12 col-sm-12 col-md-12 col-lg-4 border">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-4">
           <p>prueba</p>
         </div>
-        <div class="col-12 col-sm-12 col-md-12 col-lg-4 border">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-4">
           <p>prueba</p>
         </div>
-        <div class="col-12 col-sm-12 col-md-12 col-lg-4 border">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-4">
           <p>prueba</p>
         </div>
       </div>
 
       <div class="row">
-        <div class="col-12 col-sm-12 col-md-12 col-lg-4 border">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-4">
           <p>prueba</p>
         </div>
-        <div class="col-12 col-sm-12 col-md-12 col-lg-4 border">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-4">
           <p>prueba</p>
         </div>
-        <div class="col-12 col-sm-12 col-md-12 col-lg-4 border">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-4">
+          <p>prueba</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-4">
+          <p>prueba</p>
+        </div>
+        <div class="col-12 col-sm-12 col-md-12 col-lg-4">
+          <p>prueba</p>
+        </div>
+        <div class="col-12 col-sm-12 col-md-12 col-lg-4">
           <p>prueba</p>
         </div>
       </div>
@@ -80,7 +80,7 @@
 
       <!-- clase para que el footer ocupe toda la pantalla -->
       <div class="row">
-        <div class="col-12 border">
+        <div class="col-12">
           <p>prueba</p>
         </div>
       </div>
